[tool.poetry]
name = "proyecto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"  # Or your desired version
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
